fix z-index for mobile menu

--- a/src/resources/App.css
+++ b/src/resources/App.css
@@ -409,6 +409,7 @@ nav {
   #button-list {
     flex-direction: column;
     margin-top: 15px;
+    z-index: 10;
   }
   
   #button-list button {
